--- a/RUNT/report.Rmd
+++ b/RUNT/report.Rmd
@@ -6,55 +6,125 @@ params:
   a: NA
   b: NA
   c: NA
+  d: NA
   show_text: NA
+  choices: NA
 ---
 
 
-\begin{center}
-Text
-\end{center}
 
 
+```{r conditional_block, echo=FALSE, results='asis', eval=params$show_text}
 
-
-```{r conditional_block, echo=FALSE, results='asis', eval=T}
-
-
-cat("
-
-
-
-## Hey look, a heading!
-lorem ipsum dolor emet...
-
-
-
-
-
-")
-```
-
-
-
-```{r, eval=T, echo=F}
 library(ggplot2)
-#plot(rnorm(params$n), rnorm(params$n))
-
-#params$a
-
-params$b
-
-#params$c
-```
-
-
-```{r, eval=T, echo=F}
-library(ggplot2)
-#plot(rnorm(params$n), rnorm(params$n))
-
-#params$a
-
-#params$b
-
+if(params$choices[1] == "1. Market Share"){
+cat("## Reporte de Market Share")
+cat("\n")
+params$a
+} else if(params$choices[1] == "2. Evolucion"){
+cat("## Reporte de Evolución")
+cat("\n")
+params$b  
+} else if(params$choices[1] == "3. Contexto"){ 
+cat("## Reporte de Contexto")
+cat("\n")
 params$c
+} else if(params$choices[1] == "4. Variacion"){
+cat("## Reporte de Variación")
+cat("\n")
+params$d 
+}
+
+
+```
+
+```{r conditional_block1, echo=FALSE, results='asis', eval=params$show_text}
+cat("\n")
+```
+
+
+```{r conditional_block2, echo=FALSE, results='asis', eval=params$show_text}
+
+library(ggplot2)
+if(params$choices[2] == "1. Market Share"){
+cat("## Reporte de Market Share")
+cat("\n")
+params$a
+} else if(params$choices[2] == "2. Evolucion"){
+cat("## Reporte de Evolución")
+cat("\n")
+params$b  
+} else if(params$choices[2] == "3. Contexto"){ 
+cat("## Reporte de Contexto")
+cat("\n")
+params$c
+} else if(params$choices[2] == "4. Variacion"){
+cat("## Reporte de Variación")
+cat("\n")
+params$d 
+}
+
+
+```
+
+```{r conditional_block3, echo=FALSE, results='asis', eval=params$show_text}
+cat("\n")
+```
+
+
+```{r conditional_block4, echo=FALSE, results='asis', eval=params$show_text}
+
+library(ggplot2)
+if(params$choices[3] == "1. Market Share"){
+cat("## Reporte de Market Share")
+cat("\n")
+params$a
+} else if(params$choices[3] == "2. Evolucion"){
+cat("## Reporte de Evolución")
+cat("\n")
+params$b  
+} else if(params$choices[3] == "3. Contexto"){ 
+cat("## Reporte de Contexto")
+cat("\n")
+params$c
+} else if(params$choices[3] == "4. Variacion"){
+cat("## Reporte de Variación")
+cat("\n")
+params$d 
+}
+
+
+```
+
+```{r conditional_block5, echo=FALSE, results='asis', eval=params$show_text}
+cat("\n")
+```
+
+
+```{r conditional_block6, echo=FALSE, results='asis', eval=params$show_text}
+
+library(ggplot2)
+if(params$choices[4] == "1. Market Share"){
+cat("## Reporte de Market Share")
+cat("\n")
+params$a
+} else if(params$choices[4] == "2. Evolucion"){
+cat("## Reporte de Evolución")
+cat("\n")
+params$b  
+} else if(params$choices[4] == "3. Contexto"){ 
+cat("## Reporte de Contexto")
+cat("\n")
+params$c
+} else if(params$choices[4] == "4. Variacion"){
+cat("## Reporte de Variación")
+cat("\n")
+params$d 
+}
+
+
+```
+
+```{r conditional_block7, echo=FALSE, results='asis', eval=params$show_text}
+cat("\n")
 ```
